--- a/LDAP/server.conf
+++ b/LDAP/server.conf
@@ -1,5 +1,5 @@
 HOST="10.122.202.15"
 PORT="389"
 #Jesli haslo ma znajdowac sie w configu i program ma o nie nie pytac przy kazdym uruchomieniu - odkomentuj ponizsze dwie linie.
-#EXT_PASS="yes"
-#PASS="dupa.123"
+EXT_PASS="yes"
+PASS="dupa.123"
